--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1277,12 +1277,16 @@ button[type="submit"]:hover {
   padding: 0.75rem;
   margin-top: 0;
   margin-bottom: 1.2rem;
+  color: #333;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 6px;
   box-sizing: border-box;
 }
-
+#panelcontainer-8d6919b56b .checkbox-wrapper{
+    margin-top: 25px;
+    padding-left: 10px;
+}
 #emailinput-365426c7b5{
     margin-bottom: 0;
 }
@@ -1291,6 +1295,14 @@ button[type="submit"]:hover {
     font-family: sans-serif;
     padding: 2px 10px;
 
+}
+#textinput-50130fd7d8,
+#numberinput-95034c9681{
+    margin-bottom: unset;
+}
+#textinput-50130fd7d8-description,
+#numberinput-95034c9681-description{
+    padding: 0 8px;
 }
 .adoptive-form-multi-step textarea {
   height: 120px;
